# django-pivot

./: .travis.yml  LICENSE  Readme.rst  histogram.py  pivot.py  pyproject.toml  runtests.py  setup.py
.github/workflows/: mysql_test.yml  postgres_test.yml  sqlite_test.yml  test.yml
django_pivot/: histogram.py  pivot.py  utils.py
django_pivot/tests/: test_mysql_settings.py  test_postgres_settings.py  test_sqlite_settings.py
django_pivot/tests/pivot/: models.py  test.py
pivot/: Readme.rst  pivot.py  runtests.py
pivot/tests/pivot/: models.py  test.py
tests/: test_mysql_settings.py  test_postgres_settings.py  test_sqlite_settings.py
tests/pivot/: models.py  test.py
